--- a/swipe-reveal-layout/build.gradle
+++ b/swipe-reveal-layout/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
+group='com.github.LemonNicholas'
 
 android {
     compileSdkVersion 24
@@ -9,8 +10,8 @@ android {
     defaultConfig {
         minSdkVersion 9
         targetSdkVersion 24
-        versionCode 8
-        versionName "1.4.1"
+        versionCode 9
+        versionName "1.4.2"
     }
     buildTypes {
         release {
