Update vcs.xml, README.md, and gradle.properties

--- a/swipeRevealLayout/gradle.properties
+++ b/swipeRevealLayout/gradle.properties
@@ -4,7 +4,7 @@ POM_ARTIFACT_ID=swipereveallayout
 VERSION_NAME=0.0.1
 VERSION_CODE=1
 
-POM_NAME=PinEntryView
+POM_NAME=SwipeRevealLayout
 POM_PACKAGING=aar
 POM_DESCRIPTION=A layout that you can swipe/slide to show another layout.  (Updated fork of https://github.com/chthai64/SwipeRevealLayout)
 POM_INCEPTION_YEAR=2021
