--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
-        android:name=".MyApp"
+        android:name="app.habitap.swipereveallayout.demo.MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -11,7 +11,7 @@
         android:theme="@style/Theme.SwipeRevealLayout">
 
         <activity
-            android:name=".MainActivity"
+            android:name="app.habitap.swipereveallayout.demo.MainActivity"
             android:exported="true">
 
             <intent-filter>
