Update Publishing.md, build.gradle, and 3 more files...

--- a/gradle.properties
+++ b/gradle.properties
@@ -32,5 +32,33 @@ android.defaults.buildfeatures.buildconfig = false
 
 androidPluginVersion=8.0.0-alpha09
 kotlinVersion=1.7.20
-dokkaVersion=1.5.0
-gradleMavenPublishVersion=0.18.0
+dokkaVersion=1.7.20
+gradleMavenPublishVersion=0.22.0
+
+#region Gradle Maven Publish
+SONATYPE_HOST=S01
+RELEASE_SIGNING_ENABLED=true
+
+GROUP=app.habitap
+POM_ARTIFACT_ID=swipereveallayout
+VERSION_NAME=0.0.1
+VERSION_CODE=1
+
+POM_NAME=SwipeRevealLayout
+POM_PACKAGING=aar
+POM_DESCRIPTION=A layout that you can swipe/slide to show another layout.  (Updated fork of https://github.com/chthai64/SwipeRevealLayout)
+POM_INCEPTION_YEAR=2022
+POM_URL=https://github.com/Habitap-Pte-Ltd/SwipeRevealLayout/
+
+POM_LICENSE_NAME=The MIT License
+POM_LICENSE_URL=https://opensource.org/licenses/MIT
+POM_LICENSE_DIST=repo
+
+POM_SCM_URL=https://github.com/Habitap-Pte-Ltd/SwipeRevealLayout/
+POM_SCM_CONNECTION=scm:git:git://github.com/Habitap-Pte-Ltd/SwipeRevealLayout.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com:Habitap-Pte-Ltd/SwipeRevealLayout.git
+
+POM_DEVELOPER_ID=Habitap-Pte-Ltd
+POM_DEVELOPER_NAME=Habitap Pte. Ltd.
+POM_DEVELOPER_URL=https://github.com/Habitap-Pte-Ltd
+#endregion Gradle Maven Publish
