--- a/swipeRevealLayout/build.gradle
+++ b/swipeRevealLayout/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id "com.android.library"
     id "org.jetbrains.kotlin.android"
-    id "org.jetbrains.dokka"
-    id "com.vanniktech.maven.publish"
+    id "org.jetbrains.dokka" version "$dokkaVersion"
+    id "com.vanniktech.maven.publish" version "$gradleMavenPublishVersion"
 }
 
 apply from: "../versions.gradle"
